--- a/css/main.css
+++ b/css/main.css
@@ -192,5 +192,142 @@ site-header__search-form-input::placeholdr{
 }
 /* ----------------------OpERATOR END------------ */
 
+/* ----------------------NEWS START---------------- */
+.news{
+    padding-top: 70px;
+    padding-bottom: 70px;
+    
+}
 
+.news__title{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: auto;
+    letter-spacing: -0.15px;
+    color: black;
+    margin-bottom: 30px;
+}
+
+.news__list{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
+.news__item{
+    max-width: 350px;
+    /* height: 400px; */
+    background-color: #fff;
+    border-radius: 4px;
+}
+
+.news__item-img{
+    width: 350px;
+    height: 200px;
+    border-radius: 4px;
+}
+
+.news__item-info-wrapper{
+    padding: 36px 20px 20px 24px;
+    
+}
+
+.news__item-info{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+    letter-spacing: 0.11px;
+    color: #000;
+    margin-bottom: 24px;
+}
+
+.hr{
+    color: #979797;
+    opacity: 10%;
+    margin-bottom: 20px;
+}
+
+.news__footer-wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.news__button{
+    max-width: 1108px;
+    width: 100%;
+    margin-top: 33px;
+    margin-bottom: 68px;
+    padding: 18px 510px;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    line-height: auto;
+    font-weight: medium;
+    letter-spacing: -0.23px;
+    border-style: none;
+    border-radius: 2px;
+    background-color: #979797;
+    
+}
+
+.news__button:hover{
+    background-color: #d7cfcf;
+    
+}
+
+/* ----------------------NEWS END---------------- */
 /* ----------------------MAIN END------------------ */
+
+
+/* ----------------------FOOTER START------------- */
+.site-footer{
+    background-color: #fff;
+    padding-top: 48px;
+    padding-bottom: 28px;
+}
+
+.footer__info-wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.footer__info-title{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: medium;
+    font-size: 16px;
+    line-height: auto;
+    letter-spacing: 0.09px;
+    color: #000;
+    margin-bottom: 26px;
+}
+
+.footer__info-list{
+    list-style: none;
+    margin-bottom: 60px;
+}
+
+.footer__info-link{
+    display: inline-block;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: auto;
+    letter-spacing: 0.08px;
+    color: #000;
+    text-decoration: none;
+    margin-bottom: 16px;
+    opacity: 30%;
+
+}
+
+
+
+/* ----------------------FOOTER END ---------------*/
