--- a/css/main.css
+++ b/css/main.css
@@ -328,6 +328,30 @@ site-header__search-form-input::placeholdr{
 
 }
 
+.footer__info-call{
+    display: inline-block;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: medium;
+    font-size: 25px;
+    line-height: 33px;
+    letter-spacing: 0px;
+    color: #000000;
+    margin-bottom: 12px;
+}
+
+.footer__info-address{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0px;
+    color: #000000;
+    opacity: 30%;
+    text-decoration: none;
+    
+}
+
 
 
 /* ----------------------FOOTER END ---------------*/
