--- a/css/main.css
+++ b/css/main.css
@@ -349,7 +349,25 @@ site-header__search-form-input::placeholdr{
     color: #000000;
     opacity: 30%;
     text-decoration: none;
+
+}
+
+
+.footer__language-select{
+    padding: 10px 16px;
+    border: none;
+    background-color: #F8F8FA;
+    border-radius: 2px;
     
+}
+
+.footer__language-option{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: auto;
+    letter-spacing: -0.2px;
+    color: #000000;
 }
 
 
